# sw.allotmentclub.backend

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  COPYRIGHT.rst  MANIFEST.in  README.rst  appenv  index.html  pyproject.toml  pytest  pytest.ini  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: allure-python-pytest.yml  pytest.yml
10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
10/widgets/: duration.json  executors.json  retry-trend.json  severity.json  summary.json
102/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
102/export/: influxDbData.txt  prometheusData.txt
102/history/: history-trend.json
102/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
103/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
103/export/: influxDbData.txt  prometheusData.txt
103/history/: history-trend.json  history.json
103/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
105/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
105/export/: influxDbData.txt  prometheusData.txt
106/data/: suites.csv  (+4 more)
last-history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
(+45093 files in other folders)
